# ipdc-control

./: README.md
ros_ws/src/ipdc/: CMakeLists.txt  package.xml
ros_ws/src/ipdc/msg/: Shape.msg
ros_ws/src/ipdc/src/: shape_finder.cpp
ros_ws/src/ipdc/srv/: GetShapes.srv
rosjava_ws/src/control_node_py/: CMakeLists.txt  package.xml
rosjava_ws/src/control_node_py/scripts/: control.py
rosjava_ws/src/interface_wrappers/: CMakeLists.txt  package.xml
rosjava_ws/src/interface_wrappers/scripts/: pickup_server.py
rosjava_ws/src/interface_wrappers/srv/: PickupAt.srv
rosjava_ws/src/kuka_interface/: CMakeLists.txt  build.gradle  package.xml  settings.gradle
rosjava_ws/src/kuka_interface/gradle/wrapper/: gradle-wrapper.properties
rosjava_ws/src/kuka_interface/kuka_action/: build.gradle
rosjava_ws/src/kuka_interface/kuka_action/src/main/java/com/github/kuka_interface/kuka_action/: GripServer.java  PTPServer.java
rosjava_ws/src/kuka_msgs/: CMakeLists.txt  package.xml
rosjava_ws/src/kuka_msgs/srv/: MovePTP.srv  SetGrip.srv
rosjava_ws/src/pythonPath/: CMakeLists.txt  package.xml
rosjava_ws/src/pythonPath/scripts/: move_ptp_client.py
src/: ShapeRecognition.cpp  ShapeRecognition.cpp~  ShapeRecognitionColorblind.cpp  ShapeRecognitionHSV.cpp  ShapeRecognitionMulticolor.cpp
